fixed footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .carousel-inner img {
-  height: 94vh;
+  height: 95vh;
   width: 100%;
   object-fit: cover;
 }
